changed gridcol on secretariat section

--- a/src/components/showcase.astro
+++ b/src/components/showcase.astro
@@ -15,27 +15,27 @@ const orderedSites = featuredSites.sort(
 const features: Array<FeatureItem> = [
   {
     title: "Sanjana Yammanur",
-    subtitle: "ALL INDIA POLITICAL PARTY MEET",
+    subtitle: "Secretary General",
     description: "letsjgejgej",   
     icon: "mdi:instagram",
   },
   {
     title: "Mahendra Lakshmi",
-    subtitle: "UNITED NATIONS HUMAN RIGHTS",
+    subtitle: "Director General",
     description:
       "UNHRC is a key committee in Model United Nations that addresses human rights issues on a global scale. Delegates in this committee represent different countries and work towards promoting and protecting human rights worldwide. They debate and develop resolutions related to pressing human rights concerns, such as freedom of expression, gender equality, and the rights of vulnerable populations. UNHRC plays a crucial role in raising awareness and taking action to ensure the realization of human rights for all.",
     icon: "mdi:instagram",
   },
   {
-    title: "Chandrika",
-    subtitle: "DISARMAMENT & INTERNATIONAL",
+    title: "J. Chandrika",
+    subtitle: "Deputy Secretary General",
     description:
       "DISEC is a prominent committee in Model United Nations focused on matters related to disarmament, global security, and non-proliferation of weapons. Delegates representing different countries deliberate on a range of topics, including nuclear disarmament, arms control, cybersecurity, and counter-terrorism. Through research, negotiation, and drafting resolutions, DISEC seeks to establish measures that enhance international security, reduce arms race tensions, and foster cooperation among nations.",
     icon: "mdi:security",
   },
   {
-    title: "Pramod",
-    subtitle: "INTERNATIONAL PRESS",
+    title: "M.Pramod Reddy",
+    subtitle: "Deputy Director General",
     description:
       "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
     icon: "mdi:camera",
@@ -47,40 +47,111 @@ const features: Array<FeatureItem> = [
     icon: "mdi:security",
   },
   {
-    title: "Raghava",
-    subtitle: "INTERNATIONAL PRESS",
+    title: "Raghava Keesanapalli",
+    subtitle: "USG-IT Head",
     description:
       "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
     icon: "mdi:camera",
   },
   {
     title: "Jatin",
-    subtitle: "DISARMAMENT & INTERNATIONAL",
+    subtitle: "USG-design Head",
     description:
       "DISEC is a prominent committee in Model United Nations focused on matters related to disarmament, global security, and non-proliferation of weapons. Delegates representing different countries deliberate on a range of topics, including nuclear disarmament, arms control, cybersecurity, and counter-terrorism. Through research, negotiation, and drafting resolutions, DISEC seeks to establish measures that enhance international security, reduce arms race tensions, and foster cooperation among nations.",
     icon: "mdi:security",
   },
   {
     title: "Sakshi Sinha",
-    subtitle: "INTERNATIONAL PRESS",
+    subtitle: "USG-Marketing Head",
     description:
       "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
     icon: "mdi:camera",
   },
+  {
+    title: "Laxmi Narayan",
+    subtitle: "USG-Transport Head",
+    description:
+      "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
+    icon: "mdi:camera",
+  },
+  {
+    title: "Keerthana",
+    subtitle: "USG-Delegate Affairs Head",
+    description:
+      "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
+    icon: "mdi:camera",
+  },
+  {
+    title: "Koushik",
+    subtitle: "USG-Delegate Affairs Head",
+    description:
+      "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
+    icon: "mdi:camera",
+  },
+  {
+    title: "Akanksha",
+    subtitle: "USG-External Affairs",
+    description:
+      "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
+    icon: "mdi:camera",
+  },
+  {
+    title: "Abrar",
+    subtitle: "USG-External Affairs",
+    description:
+      "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
+    icon: "mdi:camera",
+  },
+  {
+    title: "Jahnavi",
+    subtitle: "OC-Head",
+    description:
+      "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
+    icon: "mdi:camera",
+  },
+  {
+    title: "Vedanth Kankan",
+    subtitle: "OC-Head",
+    description:
+      "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
+    icon: "mdi:camera",
+  },
+  {
+    title: "Rahul Dasari",
+    subtitle: "USG-Digital Head",
+    description:
+      "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
+    icon: "mdi:camera",
+  },
+  {
+    title: "Kevin",
+    subtitle: "USG-Venue/Socials Head",
+    description:
+      "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
+    icon: "mdi:camera",
+  },
+  {
+    title: "M.Srilekha",
+    subtitle: "USG-Venue/Socials head",
+    description:
+      "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
+    icon: "mdi:camera",
+  },
+
 ];
 ---
 
 <ContentSection title="Secretariat" id="secretariat">
   <Fragment slot="lead">
-    Meet our <span class="text-primary">Team</span>.{" "}
+    Meet our <span class="text-primary">Team</span>
   </Fragment>
   <div style="margin-top:-80px;">
     <div class="mx-auto max-w-2xl px-4 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
       <div
-        class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8"
+        class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2  lg:grid-cols-3 xl:grid-cols-5 xl:gap-x-8"
       >
         {
-          features.map(({ title, subtitle,description,icon }) => (
+          features.map(({ title, subtitle,description}) => (
             <div>
               <div class="aspect-h-1 aspect-w-1 xl:aspect-h-8 xl:aspect-w-7 w-full overflow-hidden rounded-lg bg-gray-200">
                 <img
