added photos in Secretariat and added content in Commmitte

--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -26,6 +26,13 @@ const features: Array<FeatureItem> = [
     icon: "mdi:security",
   },
   {
+    title: "ECOSOC",
+    subtitle:"ECONOMIC AND SOCIAL COUNCIL",
+    description:
+      "The Economic and Social Council, plays a vital role in the Model United Nations by addressing global economic and social challenges. Delegates from various nations come together to discuss a wide range of topics, including sustainable development, poverty eradication, gender equality, and global health. Through in-depth research, diplomatic negotiations, and resolution drafting, ECOSOC aims to create policies that promote economic growth, social equity, and a better quality of life for people around the world.",
+    icon: "mdi:money",
+  },
+  {
     title: "IP",
     subtitle:"INTERNATIONAL PRESS",
     description:
