--- a/src/components/showcase.astro
+++ b/src/components/showcase.astro
@@ -16,104 +16,80 @@ const features: Array<FeatureItem> = [
   {
     title: "Sanjana Yammanur",
     subtitle: "Secretary General",
-    description: "letsjgejgej",   
+    description: "https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Sanjana%20-%20SG.png?raw=true",   
     icon: "mdi:instagram",
   },
   {
     title: "Mahendra Lakshmi",
     subtitle: "Director General",
     description:
-      "UNHRC is a key committee in Model United Nations that addresses human rights issues on a global scale. Delegates in this committee represent different countries and work towards promoting and protecting human rights worldwide. They debate and develop resolutions related to pressing human rights concerns, such as freedom of expression, gender equality, and the rights of vulnerable populations. UNHRC plays a crucial role in raising awareness and taking action to ensure the realization of human rights for all.",
+      "https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Mahendra%20-%20DG.png?raw=true",
     icon: "mdi:instagram",
   },
   {
     title: "J. Chandrika",
     subtitle: "Deputy Secretary General",
-    description:
-      "DISEC is a prominent committee in Model United Nations focused on matters related to disarmament, global security, and non-proliferation of weapons. Delegates representing different countries deliberate on a range of topics, including nuclear disarmament, arms control, cybersecurity, and counter-terrorism. Through research, negotiation, and drafting resolutions, DISEC seeks to establish measures that enhance international security, reduce arms race tensions, and foster cooperation among nations.",
+    description:"https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Chandrika%20-%20USG%20Deputy%20SG.png?raw=true",
     icon: "mdi:security",
   },
   {
     title: "M.Pramod Reddy",
     subtitle: "Deputy Director General",
-    description:
-      "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
+    description:"https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Pramod%20-%20Deputy%20DG.png?raw=true",
     icon: "mdi:camera",
   },
   {
     title: "Tanmay Pradhan",
     subtitle: "USG-IT Head",
-    description:"https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIF.UfvKhdjsC40Xlh4geoDPqA%26pid%3DApi&f=1&ipt=d88d8018de54d82e79c163a4a685917a260ee5df23894f2f270b2a5331f857fd&ipo=images",
+    description:"https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Tanmay%20-%20USG%20IT.png?raw=true",
     icon: "mdi:security",
   },
   {
     title: "Raghava Keesanapalli",
     subtitle: "USG-IT Head",
-    description:
-      "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
+    description:"https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Raghav%20-%20USG%20IT.png?raw=true",
     icon: "mdi:camera",
   },
   {
     title: "Jatin",
     subtitle: "USG-design Head",
     description:
-      "DISEC is a prominent committee in Model United Nations focused on matters related to disarmament, global security, and non-proliferation of weapons. Delegates representing different countries deliberate on a range of topics, including nuclear disarmament, arms control, cybersecurity, and counter-terrorism. Through research, negotiation, and drafting resolutions, DISEC seeks to establish measures that enhance international security, reduce arms race tensions, and foster cooperation among nations.",
+      "https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Jatin%20Jangir%20-%20USG%20Design.png?raw=true",
     icon: "mdi:security",
   },
   {
     title: "Sakshi Sinha",
     subtitle: "USG-Marketing Head",
     description:
-      "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
-    icon: "mdi:camera",
-  },
-  {
-    title: "Laxmi Narayan",
-    subtitle: "USG-Transport Head",
-    description:
-      "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
+      "https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Shakshi%20-%20USG%20Marketing.png?raw=true",
     icon: "mdi:camera",
   },
   {
     title: "Keerthana",
     subtitle: "USG-Delegate Affairs Head",
     description:
-      "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
-    icon: "mdi:camera",
-  },
-  {
-    title: "Koushik",
-    subtitle: "USG-Delegate Affairs Head",
-    description:
-      "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
+      "https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Keerthana%20-%20USG%20Delegate%20affairs.png?raw=true",
     icon: "mdi:camera",
   },
   {
     title: "Akanksha",
     subtitle: "USG-External Affairs",
     description:
-      "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
+      "https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Akanksha%20-%20USG%20External.png?raw=true",
     icon: "mdi:camera",
   },
   {
     title: "Abrar",
     subtitle: "USG-External Affairs",
     description:
-      "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
+      "https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Abrar%20-%20USG%20External.png?raw=true",
     icon: "mdi:camera",
   },
   {
     title: "Jahnavi",
     subtitle: "OC-Head",
     description:
-      "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
-    icon: "mdi:camera",
-  },
-  {
-    title: "Vedanth Kankan",
-    subtitle: "OC-Head",
-    description:
-      "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
+      "https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Jahnavi%20-%20OC%20head.png?raw=true",
     icon: "mdi:camera",
   },
   {
@@ -124,17 +100,10 @@ const features: Array<FeatureItem> = [
     icon: "mdi:camera",
   },
   {
-    title: "Kevin",
-    subtitle: "USG-Venue/Socials Head",
-    description:
-      "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
-    icon: "mdi:camera",
-  },
-  {
     title: "M.Srilekha",
     subtitle: "USG-Venue/Socials head",
     description:
-      "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
+      "https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Srilekha%20-%20USG%20Socials.png?raw=true",
     icon: "mdi:camera",
   },
 
