--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -18,7 +18,8 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
   class="flex flex-col gap-2 self-end text-center justify-center items-center sm:gap-4 sm:self-auto sm:justify-self-end"
   style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);"
   > 
-    <LogoImage />
+    <!-- <LogoImage />  -->
+    <img width="50%" src="https://i.imgur.com/Re0zuCn.png" alt="">
     <div
     class="gradient-text text-center font-extrabold tracking-tighter text-7xl"
     >
