--- a/src/components/Logo_image.astro
+++ b/src/components/Logo_image.astro
@@ -1,14 +1,14 @@
 ---
 import { Picture } from "@astrojs/image/components";
-import moonImage from "~/assets/Logo.png";
+import HeroLogo from "~/assets/Logo.png";
 
 const widths = [400, 800, 1000];
-const sizes = "0vw";
+const sizes = "10vw";
 ---
 
 <Picture
   class="w-56"
-  src={moonImage}
+  src={HeroLogo}
   widths={widths}
   sizes={sizes}
   alt="The ridged surface of the moon"
