Added secretariat pics and a contact us section

--- a/src/components/showcase.astro
+++ b/src/components/showcase.astro
@@ -15,87 +15,87 @@ const features: Array<FeatureItem> = [
   {
     title: "Sanjana Yammanur",
     subtitle: "Secretary General",
-    description: "https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Sanjana%20-%20SG.png?raw=true",   
+    description: "https://i.imgur.com/tD8TG0K.png",   
     icon: "mdi:instagram",
   },
   {
     title: "Mahendra Lakshmi",
     subtitle: "Director General",
     description:
-      "https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Mahendra%20-%20DG.png?raw=true",
+      "https://i.imgur.com/eB1skVG.png",
     icon: "mdi:instagram",
   },
   {
     title: "J. Chandrika",
     subtitle: "Deputy Secretary General",
-    description:"https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Chandrika%20-%20USG%20Deputy%20SG.png?raw=true",
+    description:"https://i.imgur.com/R6Gz30F.png",
     icon: "mdi:security",
   },
   {
     title: "M.Pramod Reddy",
     subtitle: "Deputy Director General",
-    description:"https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Pramod%20-%20Deputy%20DG.png?raw=true",
+    description:"https://i.imgur.com/XNHeruH.png",
     icon: "mdi:camera",
   },
   {
     title: "Tanmay Pradhan",
     subtitle: "USG-IT Head",
-    description: "",
+    description: "https://i.imgur.com/0BXL3xg.png",
     icon: "mdi:security",
   },
   {
-    title: "Raghava Keesanapalli",
+    title: "Raghava Kesanapalli",
     subtitle: "USG-IT Head",
-    description:"https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Raghav%20-%20USG%20IT.png?raw=true",
+    description:"https://i.imgur.com/TmBoVnT.png",
     icon: "mdi:camera",
   },
   {
     title: "Jatin",
     subtitle: "USG-design Head",
     description:
-      "https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Jatin%20Jangir%20-%20USG%20Design.png?raw=true",
+      "https://i.imgur.com/E9dVBdi.png",
     icon: "mdi:security",
   },
   {
     title: "Sakshi Sinha",
     subtitle: "USG-Marketing Head",
     description:
-      "https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Shakshi%20-%20USG%20Marketing.png?raw=true",
+      "https://i.imgur.com/IDiVXT6.png",
     icon: "mdi:camera",
   },
   {
     title: "Keerthana",
     subtitle: "USG-Delegate Affairs Head",
     description:
-      "https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Keerthana%20-%20USG%20Delegate%20affairs.png?raw=true",
+      "https://i.imgur.com/WF1pZ8I.png",
     icon: "mdi:camera",
   },
   {
     title: "Akanksha",
     subtitle: "USG-External Affairs",
     description:
-      "https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Akanksha%20-%20USG%20External.png?raw=true",
+      "https://i.imgur.com/tlmMh9y.png",
     icon: "mdi:camera",
   },
   {
     title: "Abrar",
     subtitle: "USG-External Affairs",
     description:
-      "https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Abrar%20-%20USG%20External.png?raw=true",
+      "https://i.imgur.com/RM8C7rk.png",
     icon: "mdi:camera",
   },
   {
     title: "Jahnavi",
     subtitle: "OC-Head",
     description:
-      "https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Jahnavi%20-%20OC%20head.png?raw=true",
+      "https://i.imgur.com/1f1IKs0.png",
     icon: "mdi:camera",
   },
   {
     title: "M.Srilekha",
     subtitle: "USG-Venue/Socials head",
     description:
-      "https://github.com/tanmaypradhan4112/CMRIT-MUN-website/blob/main/src/assets/EB/Srilekha%20-%20USG%20Socials.png?raw=true",
+      "https://i.imgur.com/LbPnEaN.png",
     icon: "mdi:camera",
   },
 
