--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -14,13 +14,13 @@ const navItems: Array<NavItem> = [
 
 <header
   id="page-header"
-  class="absolute bottom-0 z-20 flex w-full items-center justify-between border-b border-transparent px-8 py-4 text-white"
->
-  <a class="flex items-center gap-3 hover:!text-default" href="#">
+  class="absolute bottom-0 z-20  bg-gradient-to-r from-indigo-900 to-indigo-950  flex w-full items-center justify-between  border-b  px-8 py-4 text-white"
+  >
+  <a class="flex text-white items-center gap-3 hover:!text-gray-500" href="#">
     <h1 class="font-extrabold">CMRIT MUN</h1>
   </a>
   <div>
-    <div class="flex items-center gap-6">
+    <div class="flex text-white items-center gap-6">
       <nav class="hidden sm:block">
         <ul class="flex items-center gap-6">
           {
@@ -58,7 +58,7 @@ const navItems: Array<NavItem> = [
             </button>
           </header>
           <div class="flex justify-center">
-            <Icon name="logomark" class="h-16" />
+            <!-- <Icon name="logomark" class="h-16" /> -->
           </div>
           <nav>
             <ul class="flex flex-col">
