--- a/src/components/showcase-card.astro
+++ b/src/components/showcase-card.astro
@@ -21,7 +21,7 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
       widths={widths}
       sizes={sizes}
       aspectRatio="16:9"
-      alt={`A screenshot of ${site.data.url}`}
+      alt={`${site.data.url}`}
     />
     <figcaption class="absolute inset-0">
       <div
