--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -49,13 +49,13 @@ const features: Array<FeatureItem> = [
   <ul class="grid max-w-6xl grid-cols-1 md:grid-cols-2 lg:grid-cols-2">
     {
       features.map(({ title, subtitle,description, icon }) => (
-        <li class="flex flex-col items-center gap-4 border border-default bg-offset p-6">
-          <div class="h-16 w-16 rounded-full border-2 border-current p-3">
+        <li class="flex flex-col items-center gap-5 text-white bg-white bg-opacity-20 backdrop-blur-lg drop-shadow-lg border border-default bg-offset p-6">
+          <div class="h-16 w-16 text-white rounded-full border-2 border-current p-3">
             <Icon name={icon} />
           </div>
           <p class="text-center font-extrabold text-xl">{title}</p>
           <p class="text-center font-extrabold text-sm">{subtitle}</p>
-          <p class="text-justify text-offset text-sm">{description}</p>
+          <p class="text-justify text-white  text-sm">{description}</p>
         </li>
       ))
     }
