--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -27,7 +27,7 @@ const links: Array<FooterLink> = [
 ];
 ---
 
-<footer class="relative flex h-64 items-center justify-center">
+<footer class="relative text-white z-100 flex h-64 items-center justify-center">
   <div class="absolute inset-0 overflow-hidden opacity-40">
     <HeroImage />
   </div>
