--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -5,7 +5,7 @@ const widths = [450, 800];
 const sizes = "(min-width: 640px) 42vw, 67vw";
 ---
 
-<section class="relative h-full">
+<section class="relative bg-black h-full">
   <div class="absolute inset-0 overflow-hidden opacity-10">
     <SplashImage />
   </div>
@@ -15,7 +15,7 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
   >
   <h2
   class="flex flex-col gap-2 self-end text-center justify-center items-center sm:gap-4 sm:self-auto sm:justify-self-end"
-  style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);"
+  style="position: absolute; top: 45%; left: 50%; transform: translate(-50%, -50%);"
   > 
     <img width="40%" src="https://i.imgur.com/Re0zuCn.png" alt="">
     <div
