--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -59,7 +59,7 @@ const features: Array<FeatureItem> = [
         features.map(({ title,description }) => (
           <li class="flex flex-col gap-4 bg-white bg-opacity-20 backdrop-blur-lg drop-shadow-lg border border-default bg-offset p-6">
             <p class="font-extrabold text-white text-xl">{title}</p>
-            <p class="text-justify text-white text-offset text-sm">{description}</p>
+            <p class="lg:text-justify text-white text-offset text-sm">{description}</p>
           </li>
         ))
       }
