--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -55,7 +55,7 @@ const features: Array<FeatureItem> = [
           </div>
           <p class="text-center font-extrabold text-xl">{title}</p>
           <p class="text-center font-extrabold text-sm">{subtitle}</p>
-          <p class="text-justify text-white  text-sm">{description}</p>
+          <p class="lg:text-justify  text-white  text-sm">{description}</p>
         </li>
       ))
     }
