--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -17,16 +17,16 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
   class="flex flex-col gap-2 self-end text-center justify-center items-center sm:gap-4 sm:self-auto sm:justify-self-end"
   style="position: absolute; top: 45%; left: 50%; transform: translate(-50%, -50%);"
   > 
-    <img width="40%" src="https://i.imgur.com/Re0zuCn.png" alt="">
+    <img class="w-30 lg:w-60 md:w-40" src="https://i.imgur.com/Re0zuCn.png" alt="">
     <div
     class="gradient-text text-center font-extrabold tracking-tighter text-7xl"
     >
         CMRIT MUN 2023
         <div class="tracking-normal">
-          <font size="5">7th, 8th and 9th Dec </font>
+          <p class="text-sm my-3 lg:text-lg">7th, 8th and 9th Dec </p>
         </div>
-        <div class="tracking-normal text-sm">
-          <font size="5">CMRIT, Hyderabad</font>
+        <div class="tracking-normal">
+          <p class="text-sm lg:text-lg">CMRIT, Hyderabad</p>
         </div>
       </div>
     </h2>
