--- a/src/components/showcase.astro
+++ b/src/components/showcase.astro
@@ -107,7 +107,7 @@ const features: Array<FeatureItem> = [
     Meet our <span class="text-primary">Team</span>
   </Fragment>
   <div style="margin-top:-80px;">
-    <div class="mx-auto max-w-2xl px-4 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
+    <div class="mx-auto max-w-2xl px-5 mt-10 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
       <div
         class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2  lg:grid-cols-3 xl:grid-cols-5 xl:gap-x-8"
       >
