Updating registration form

--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -13,11 +13,11 @@ import ContentSection from "~/components/content-section.astro";
   <div>
     <!-- Register button -->
     <a
-    href="{}"
+    href="https://linktr.ee/cmritmunregistrations"
     class="flex items-center text-white justify-center gap-3 border-2 border-current px-6 py-4"
     >
     <Icon pack="mdi" name="register" class="h-8" />
-    <span>Registrations</span>
+    <span>Delegate Registrations</span>
   </a>
 </div>
 </ContentSection>
