--- a/src/components/showcase.astro
+++ b/src/components/showcase.astro
@@ -32,7 +32,7 @@ const features: Array<FeatureItem> = [
     icon: "mdi:security",
   },
   {
-    title: "M.Pramod Reddy",
+    title: "M. Pramod Reddy",
     subtitle: "Deputy Director General",
     description:"https://i.imgur.com/XNHeruH.png",
     icon: "mdi:camera",
@@ -51,7 +51,7 @@ const features: Array<FeatureItem> = [
   },
   {
     title: "Jatin",
-    subtitle: "USG-design Head",
+    subtitle: "USG-Design Head",
     description:
       "https://i.imgur.com/E9dVBdi.png",
     icon: "mdi:security",
