World bank committee addition

--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -26,10 +26,10 @@ const features: Array<FeatureItem> = [
     icon: "mdi:security",
   },
   {
-    title: "ECOSOC",
-    subtitle:"ECONOMIC AND SOCIAL COUNCIL",
+    title: "WB",
+    subtitle:"World Bank",
     description:
-      "The Economic and Social Council, plays a vital role in the Model United Nations by addressing global economic and social challenges. Delegates from various nations come together to discuss a wide range of topics, including sustainable development, poverty eradication, gender equality, and global health. Through in-depth research, diplomatic negotiations, and resolution drafting, ECOSOC aims to create policies that promote economic growth, social equity, and a better quality of life for people around the world.",
+      "The World Bank Committee in Model United Nations (MUN) deals with global financial and economic matters. Delegates, representing member states, focus on development, poverty reduction, infrastructure investment, and financial stability. Through research and resolution drafting, the committee aims to create policies that promote economic growth, reduce inequalities, and alleviate poverty worldwide. It offers delegates a platform to collaborate and develop innovative solutions to these critical global challenges.",
     icon: "mdi:money",
   },
   {
