--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -21,7 +21,7 @@ const features: Array<FeatureItem> = [
       title: "How can I contact the conference organizers for additional questions or support?",
       subtitle:"DISARMAMENT & INTERNATIONAL SECURITY COMMITTEE",
       description:
-        "DISEC is a prominent committee in Model United Nations focused on matters related to disarmament, global security, and non-proliferation of weapons. Delegates representing different countries deliberate on a range of topics, including nuclear disarmament, arms control, cybersecurity, and counter-terrorism. Through research, negotiation, and drafting resolutions, DISEC seeks to establish measures that enhance international security, reduce arms race tensions, and foster cooperation among nations.",
+        "Delegates are encouraged to establish contact with the organizers by utilizing the contact numbers provided on the website or within the application form",
       icon: "mdi:security",
     },
     {
